--- a/src/main/resources/view/DriverListPanel.fxml
+++ b/src/main/resources/view/DriverListPanel.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <ToolBar prefHeight="36.0" prefWidth="248.0">
-      <items>
-         <Label text="Customer List" />
-      </items>
-   </ToolBar>
-    <ListView fx:id="customerListView" VBox.vgrow="ALWAYS" />
+    <ToolBar prefHeight="30.0" prefWidth="248.0">
+        <items>
+            <Label text="Driver List" />
+        </items>
+    </ToolBar>
+    <ListView fx:id="driverListView" VBox.vgrow="ALWAYS" />
 </VBox>
