--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -36,6 +36,20 @@
 
           <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
 
+<!--          <VBox fx:id="personList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">-->
+<!--            <padding>-->
+<!--              <Insets top="10" right="10" bottom="10" left="10" />-->
+<!--            </padding>-->
+<!--            <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>-->
+<!--          </VBox>-->
+
+          <VBox fx:id="driverList" styleClass="pane-with-border" minWidth="300" prefWidth="300" VBox.vgrow="ALWAYS">
+            <padding>
+              <Insets top="10" right="10" bottom="10" left="10" />
+            </padding>
+            <StackPane fx:id="driverListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+          </VBox>
+
           <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
                      minHeight="100" prefHeight="100" maxHeight="100">
             <padding>
@@ -43,16 +57,9 @@
             </padding>
           </StackPane>
 
-          <VBox fx:id="personList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
-            <padding>
-              <Insets top="10" right="10" bottom="10" left="10" />
-            </padding>
-            <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-          </VBox>
-
           <StackPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
             <padding>
-              <Insets top="5" right="10" bottom="5" left="10" />
+              <Insets top="15" right="10" bottom="15" left="10" />
             </padding>
           </StackPane>
 
@@ -63,7 +70,7 @@
               <padding>
                 <Insets top="10" right="10" bottom="10" left="10" />
               </padding>
-              <StackPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+              <StackPane fx:id="assignedTaskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
             </VBox>
 
             <VBox fx:id="unassignedTaskList" styleClass="pane-with-border" minWidth="200" prefWidth="200" VBox.vgrow="ALWAYS">
