--- a/src/main/resources/view/CustomerListCard.fxml
+++ b/src/main/resources/view/CustomerListCard.fxml
@@ -27,6 +27,7 @@
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
       <FlowPane fx:id="tags" />
+      <Label fx:id="customerId" styleClass="cell_small_label" text="\$customerId" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
