--- a/src/main/resources/view/UnassignedTaskListPanel.fxml
+++ b/src/main/resources/view/UnassignedTaskListPanel.fxml
@@ -8,7 +8,7 @@
 <VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <ToolBar prefHeight="36.0" prefWidth="248.0">
         <items>
-            <Label text="Incomplete Deliver Tasks" />
+            <Label text="Incomplete Delivery Tasks" />
         </items>
     </ToolBar>
     <ListView fx:id="unassignedTaskListView" VBox.vgrow="ALWAYS" />
