--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -35,29 +35,46 @@
           </Menu>
         </MenuBar>
 
-        <TabPane tabClosingPolicy="UNAVAILABLE">
-                  <tabs>
-                    <Tab text="Home">
-
       <SplitPane>
         <VBox>
+          <TabPane tabClosingPolicy="UNAVAILABLE">
+            <tabs>
+              <Tab text="Home">
 <!--          <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />-->
-          <SplitPane minWidth="580">
-            <VBox fx:id="driverList" styleClass="pane-with-border" minWidth="150" prefWidth="150"
-                  minHeight="520" VBox.vgrow="ALWAYS">
-              <padding>
-                <Insets top="10" right="10" bottom="10" left="10" />
-              </padding>
-              <StackPane fx:id="driverListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-            </VBox>
+                <SplitPane minWidth="580">
+                  <VBox fx:id="driverList" styleClass="pane-with-border" minWidth="150" prefWidth="150"
+                        minHeight="520" VBox.vgrow="ALWAYS">
+                    <padding>
+                      <Insets top="10" right="10" bottom="10" left="10" />
+                    </padding>
+                    <StackPane fx:id="driverListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                  </VBox>
 
-            <VBox fx:id="customerList" styleClass="pane-with-border" minWidth="320" prefWidth="320" VBox.vgrow="ALWAYS">
-              <padding>
-                <Insets top="10" right="10" bottom="10" left="10" />
-              </padding>
-              <StackPane fx:id="customerListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-            </VBox>
-          </SplitPane>
+                  <VBox fx:id="customerList" styleClass="pane-with-border" minWidth="320" prefWidth="320" VBox.vgrow="ALWAYS">
+                    <padding>
+                      <Insets top="10" right="10" bottom="10" left="10" />
+                    </padding>
+                    <StackPane fx:id="customerListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                  </VBox>
+                </SplitPane>
+
+              </Tab>
+
+              <Tab text="History">
+                <SplitPane>
+                  <VBox>
+                  </VBox>
+                  <VBox fx:id="completedTaskList" styleClass="pane-with-border" minWidth="200" prefWidth="200" VBox.vgrow="ALWAYS">
+                    <padding>
+                      <Insets top="10" right="10" bottom="10" left="10" />
+                    </padding>
+                    <StackPane fx:id="completedTaskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                  </VBox>
+                </SplitPane>
+              </Tab>
+
+            </tabs>
+        </TabPane>
 
           <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
                      minHeight="100" prefHeight="100" maxHeight="100">
@@ -91,28 +108,6 @@
 
           </SplitPane>
       </SplitPane>
-
-            </Tab>
-
-            <Tab text="Statistics">
-              <SplitPane>
-                <VBox>
-
-
-                </VBox>
-                <VBox fx:id="completedTaskList" styleClass="pane-with-border" minWidth="200" prefWidth="200" VBox.vgrow="ALWAYS">
-                  <padding>
-                    <Insets top="10" right="10" bottom="10" left="10" />
-                  </padding>
-                  <StackPane fx:id="completedTaskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-                </VBox>
-              </SplitPane>
-
-
-            </Tab>
-
-          </tabs>
-        </TabPane>
 
       </VBox>
     </Scene>
