--- a/src/main/resources/view/NotificationWindow.fxml
+++ b/src/main/resources/view/NotificationWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.HBox?>
@@ -13,11 +14,15 @@
     </icons>
     <scene>
         <Scene>
+            <stylesheets>
+                <URL value="@DarkTheme.css" />
+                <URL value="@Extensions.css" />
+            </stylesheets>
             <HBox alignment="CENTER">
                 <children>
                     <StackPane>
-                    <VBox fx:id="incompleteTaskListPanel" styleClass="pane-with-border" minWidth="150" prefWidth="150"
-                          minHeight="520" VBox.vgrow="ALWAYS">
+                    <VBox fx:id="incompleteTaskListPanel" styleClass="pane-with-border" minWidth="800" prefWidth="800"
+                          minHeight="520" VBox.vgrow="ALWAYS" >
                         <padding>
                             <Insets top="10" right="10" bottom="10" left="10" />
                         </padding>
