--- a/src/main/resources/view/NotificationWindow.fxml
+++ b/src/main/resources/view/NotificationWindow.fxml
@@ -3,7 +3,6 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.image.Image?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.Scene?>
 <?import javafx.stage.Stage?>
 <?import javafx.scene.layout.StackPane?>
@@ -19,7 +18,7 @@
                 <URL value="@DarkTheme.css" />
                 <URL value="@Extensions.css" />
             </stylesheets>
-            <HBox alignment="CENTER">
+            <VBox alignment="CENTER">
                 <children>
                     <StackPane>
                     <VBox fx:id="incompleteTaskListPanel" styleClass="pane-with-border" minWidth="800" prefWidth="800"
@@ -30,11 +29,14 @@
                         <StackPane fx:id="incompleteTaskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                     </VBox>
                     </StackPane>
+                    <StackPane>
                     <Button fx:id="okayButton" mnemonicParsing="false" onAction="#freeDriver" text="Okay">
-                        <HBox.margin>
-                            <Insets left="5.0" />
-                        </HBox.margin>
+                        <padding>
+                            <Insets top="10" right="10" bottom="10" left="10" />
+                        </padding>
+                        <StackPane fx:id="okayButtonPlaceholder" VBox.vgrow="ALWAYS"/>
                     </Button>
+                    </StackPane>
                 </children>
                 <opaqueInsets>
                     <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
@@ -42,7 +44,7 @@
                 <padding>
                     <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
                 </padding>
-            </HBox>
+            </VBox>
         </Scene>
     </scene>
 </fx:root>
