--- a/src/main/resources/view/DriverWindow.fxml
+++ b/src/main/resources/view/DriverWindow.fxml
@@ -7,7 +7,7 @@
 <?import javafx.stage.Stage?>
 <?import java.net.URL?>
 <?import javafx.scene.layout.VBox?>
-<fx:root resizable="false" title="Help" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root resizable="false" title="Driver" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
    <icons>
       <Image url="@/images/help_icon.png" />
    </icons>
