--- a/docs/stylesheets/gh-pages.css
+++ b/docs/stylesheets/gh-pages.css
@@ -79,6 +79,12 @@ table.tableblock > .title,
     }
 }
 
+@media print {
+    a[href]:after {
+        content: none !important;
+    }
+}
+
 /* Utilities */
 
 .container {
